sumo/tests/traci/VariableRetrieval/TrafficLight/errors/UnsupportedVariable/errors.traci
Error: Answered with error to command 162: Unsupported variable specified
